recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:10: error: not found: value FaireCarre
	FaireCarre
        ^